--- a/index.html
+++ b/index.html
@@ -836,7 +836,46 @@
     <div id="social2-MotoGP" class="content-section" style="display: none;"></div>
     <div id="social2-LPGATour" class="content-section" style="display: none;"></div>
   </div>
-</div>
+       </div>
+        <!-- DIVIDER BETWEEN SOCIAL PANEL AND MEDIA CENTER PANEL -->
+      <div class="divider"></div>
+
+         <!-- MEDIA CENTER -->
+     <div class="column discussion" style="padding: 0; margin: 0; flex: 0 0 250px; background-color: white">
+  <div
+    id="discussionHeader"
+    style="position: sticky; top: 0; width: 100%; height: 18px; background-color: #c4c4c4; font-family: Helvetica, Arial, sans-serif; font-size: 10px; display: flex; align-items: center; padding-left: 10px; z-index: 11;"
+  >
+    Discussion
+  </div>
+<!-- Container for second social content areas -->
+  <div id="discussion-panel">
+    <div id="discussion-Home" class="content-section" style="display: none;"></div>
+    <div id="discussion-NFL" class="content-section" style="display: none;"></div>
+    <div id="discussion-NBA" class="content-section" style="display: none;">
+      <rssapp-feed id="X8zCF7HteOBdTUyk"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-MLB" class="content-section" style="display: none;"></div>
+    <div id="discussion-NHL" class="content-section" style="display: none;"></div>
+    <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
+    <div id="discussion-FormulaOne" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAAF" class="content-section" style="display: none;"></div>
+    <div id="discussion-PGATour" class="content-section" style="display: none;"></div>
+    <div id="discussion-UFC" class="content-section" style="display: none;"></div>
+    <div id="discussion-Boxing" class="content-section" style="display: none;"></div>
+    <div id="discussion-NASCARCupSeries" class="content-section" style="display: none;"></div>
+    <div id="discussion-Tennis" class="content-section" style="display: none;"></div>
+    <div id="discussion-WNBA" class="content-section" style="display: none;"></div>
+    <div id="discussion-LIVGolf" class="content-section" style="display: none;"></div>
+    <div id="discussion-IndyCar" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAAM" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAAW" class="content-section" style="display: none;"></div>
+    <div id="discussion-UFL" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAABaseball" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAASoftball" class="content-section" style="display: none;"></div>
+    <div id="discussion-MotoGP" class="content-section" style="display: none;"></div>
+    <div id="discussion-LPGATour" class="content-section" style="display: none;"></div>
+  </div>
 
     </div>
 
@@ -922,6 +961,20 @@
         });
       });
     </script>
+
+      <script>
+        function showDiscussionSection(section) {
+  // Hide all discussion content sections
+  document.querySelectorAll("#discussion-panel .content-section").forEach(el => {
+    el.style.display = "none";
+  });
+  // Show the discussion section for the given menu item
+  const target = document.getElementById("discussion-" + section);
+  if (target) {
+    target.style.display = "block";
+  }
+}
+      </script>
 
     <!-- News Feeds Script -->
     <script>
@@ -1248,6 +1301,7 @@ document.querySelectorAll("#menuList li[data-section]").forEach(item => {
   item.addEventListener("click", () => {
     const section = item.dataset.section; // should be "NBA" for NBA
     showSecondSocialSection(section);
+    showDiscussionSection(section);
   });
 });
     </script>
