--- a/testing.html
+++ b/testing.html
@@ -46,6 +46,7 @@
         display: flex;
         width: 100%;
         height: calc(100% - 20px);
+        justify-content: center;
       }
       .column {
         overflow: auto;
