--- a/testing.html
+++ b/testing.html
@@ -17,7 +17,7 @@
         padding: 0;
         height: 100%;
         font-family: Arial, sans-serif;
-        background-color: #fff;
+        background-color: #151515;
         color: #000;
       }
       ul,
