--- a/testing.html
+++ b/testing.html
@@ -29,17 +29,19 @@
       .spacer-line {
         height: 10px;
       }
+      .wrapper {
+  max-width: 1200px; /* or whatever width you need */
+  margin: 0 auto;
+}
       /* Top Bar */
       #topBar {
-         max-width: 1200px; /* same as .container's desired width */
-  margin: 0 auto;
+        width: 100%;
         height: 18px;
         background-color: #c4c4c4;
       }
       /* Divider below top bar */
       #topDivider {
-         max-width: 1200px; /* same as .container's desired width */
-  margin: 0 auto;
+         width: 100%;
         height: 2px;
         background-color: #151515;
       }
@@ -194,7 +196,7 @@
     </style>
   </head>
   <body>
-    
+     <div class="wrapper">
     <div id="topBar"></div>
     <div id="topDivider"></div>
     <div class="container">
@@ -881,6 +883,7 @@
     <div id="discussion-LPGATour" class="content-section" style="display: none;"></div>
   </div>
 
+    </div>
     </div>
 
     <!-- SINGLE RSS.app script load (only once) -->
