--- a/testing.html
+++ b/testing.html
@@ -32,6 +32,7 @@
       .wrapper {
   max-width: 1200px; /* or whatever width you need */
   margin: 0 auto;
+        width: 100%;
 }
       /* Top Bar */
       #topBar {
