--- a/testing.html
+++ b/testing.html
@@ -33,7 +33,7 @@
       #topBar {
         width: 100%;
         height: 18px;
-        background-color: #c4c4c4;
+        background-color: #151515;
       }
       /* Divider below top bar */
       #topDivider {
