--- a/testing.html
+++ b/testing.html
@@ -816,7 +816,9 @@
     <div id="social2-NBA" class="content-section" style="display: none;">
     <rssapp-feed id="4FRj3PbqYMYOxLiq"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="social2-MLB" class="content-section" style="display: none;"></div>
+    <div id="social2-MLB" class="content-section" style="display: none;">
+      <rssapp-feed id="vi249uKp1RN12Z3l"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-NHL" class="content-section" style="display: none;"></div>
     <div id="social2-Soccer" class="content-section" style="display: none;"></div>
     <div id="social2-FormulaOne" class="content-section" style="display: none;"></div>
