--- a/testing.html
+++ b/testing.html
@@ -819,8 +819,13 @@
     <div id="social2-MLB" class="content-section" style="display: none;">
       <rssapp-feed id="vi249uKp1RN12Z3l"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="social2-NHL" class="content-section" style="display: none;"></div>
+    <div id="social2-NHL" class="content-section" style="display: none;">
+      <rssapp-feed id="uQ6KQ0QokYHUZbbS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-Soccer" class="content-section" style="display: none;"></div>
+        <div id="social2-UEFAChampionsLeague" class="content-section" style="display: none;">
+    <rssapp-feed id="iAcjolit9IZtocN5"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+          </div>
     <div id="social2-FormulaOne" class="content-section" style="display: none;"></div>
     <div id="social2-NCAAF" class="content-section" style="display: none;"></div>
     <div id="social2-PGATour" class="content-section" style="display: none;"></div>
