--- a/testing.html
+++ b/testing.html
@@ -826,6 +826,39 @@
         <div id="social2-UEFAChampionsLeague" class="content-section" style="display: none;">
     <rssapp-feed id="iAcjolit9IZtocN5"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
           </div>
+        <div id="social2-PremierLeague" class="content-section" style="display: none;">
+          <rssapp-feed id="fVbBQHisAql16u0y"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+        </div>
+    <div id="social2-MLS" class="content-section" style="display: none;">
+      <rssapp-feed id="MC4axOkIfdT3YnTA"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LaLiga" class="content-section" style="display: none;">
+      <rssapp-feed id="ujtZrxpQ5BsSu22x"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-SerieA" class="content-section" style="display: none;">
+      <rssapp-feed id="Yglo7I7rlITB5k4u"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Bundesliga" class="content-section" style="display: none;">
+      <rssapp-feed id="IRNaWsuHSE069wgX"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Ligue1" class="content-section" style="display: none;">
+      <rssapp-feed id="dJxdxOQ8u0BwIdDu"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-FACup" class="content-section" style="display: none;">
+      <rssapp-feed id="QPSNviYGFMuae3nG"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LigaMX" class="content-section" style="display: none;">
+      <rssapp-feed id="5rd1uWss4Hs5LWYD"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NWSL" class="content-section" style="display: none;">
+      <rssapp-feed id="Itl5WDitrA9uMtoM"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-UEFAEuropaLeague" class="content-section" style="display: none;">
+      <rssapp-feed id="cbWJ6u1SUWuPeXTE"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-UEFAConferenceLeague" class="content-section" style="display: none;">
+      <rssapp-feed id="OCkGzqYQlZy39v0p"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-FormulaOne" class="content-section" style="display: none;"></div>
     <div id="social2-NCAAF" class="content-section" style="display: none;"></div>
     <div id="social2-PGATour" class="content-section" style="display: none;"></div>
