--- a/testing.html
+++ b/testing.html
@@ -859,23 +859,55 @@
     <div id="social2-UEFAConferenceLeague" class="content-section" style="display: none;">
       <rssapp-feed id="OCkGzqYQlZy39v0p"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="social2-FormulaOne" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAAF" class="content-section" style="display: none;"></div>
-    <div id="social2-PGATour" class="content-section" style="display: none;"></div>
-    <div id="social2-UFC" class="content-section" style="display: none;"></div>
-    <div id="social2-Boxing" class="content-section" style="display: none;"></div>
-    <div id="social2-NASCARCupSeries" class="content-section" style="display: none;"></div>
-    <div id="social2-Tennis" class="content-section" style="display: none;"></div>
-    <div id="social2-WNBA" class="content-section" style="display: none;"></div>
-    <div id="social2-LIVGolf" class="content-section" style="display: none;"></div>
-    <div id="social2-IndyCar" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAAM" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAAW" class="content-section" style="display: none;"></div>
+    <div id="social2-FormulaOne" class="content-section" style="display: none;">
+      <rssapp-feed id="hvCjvugpsq9yoeXQ"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAAF" class="content-section" style="display: none;">
+      <rssapp-feed id="_XvlqCaEHH9Xn9F8D"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-PGATour" class="content-section" style="display: none;">
+      <rssapp-feed id="kn6jmA3jysBosngx"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-UFC" class="content-section" style="display: none;">
+      <rssapp-feed id="P6jq1TZvc8EtrVy6"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Boxing" class="content-section" style="display: none;">
+      <rssapp-feed id="_5YtqXnChDUFwAfTB"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NASCARCupSeries" class="content-section" style="display: none;">
+      <rssapp-feed id="qrXU1idLGcAVqpDS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Tennis" class="content-section" style="display: none;">
+      <rssapp-feed id="npcSfIXdZt2e1C8N"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-WNBA" class="content-section" style="display: none;">
+      <rssapp-feed id="ouM1E0qllHGxS9V9"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LIVGolf" class="content-section" style="display: none;">
+      <rssapp-feed id="iokQbeF8AyOyB7eV"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-IndyCar" class="content-section" style="display: none;">
+      <rssapp-feed id="mQxJ5jXSwVvyqWpX"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAAM" class="content-section" style="display: none;">
+      <rssapp-feed id="A4B6vOUQc3buqCcr"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAAW" class="content-section" style="display: none;">
+      <rssapp-feed id="eoNNdETxOszQqeDL"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-UFL" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAABaseball" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAASoftball" class="content-section" style="display: none;"></div>
-    <div id="social2-MotoGP" class="content-section" style="display: none;"></div>
-    <div id="social2-LPGATour" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAABaseball" class="content-section" style="display: none;">
+      <rssapp-feed id="Wwh4ViSkq4v95s4r"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAASoftball" class="content-section" style="display: none;">
+      <rssapp-feed id="7nJZNfye0vnRtqMG"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-MotoGP" class="content-section" style="display: none;">
+      <rssapp-feed id="pSND1Jb4PbIWrdZ5"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LPGATour" class="content-section" style="display: none;">
+      
+    </div>
   </div>
        </div>
         <!-- DIVIDER BETWEEN SOCIAL PANEL AND MEDIA CENTER PANEL -->
