--- a/testing.html
+++ b/testing.html
@@ -906,7 +906,7 @@
       <rssapp-feed id="pSND1Jb4PbIWrdZ5"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
     <div id="social2-LPGATour" class="content-section" style="display: none;">
-      
+      <rssapp-feed id="lpGNeC7OD6NnAT4Z"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
   </div>
        </div>
