--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 0;
         height: 100%;
         font-family: Arial, sans-serif;
-        background-color: #fff;
+        background-color: #151515;
         color: #000;
       }
       ul,
@@ -33,7 +33,7 @@
       #topBar {
         width: 100%;
         height: 18px;
-        background-color: #c4c4c4;
+        background-color: #151515;
       }
       /* Divider below top bar */
       #topDivider {
@@ -46,6 +46,7 @@
         display: flex;
         width: 100%;
         height: calc(100% - 20px);
+        justify-content: center;
       }
       .column {
         overflow: auto;
@@ -815,26 +816,98 @@
     <div id="social2-NBA" class="content-section" style="display: none;">
     <rssapp-feed id="4FRj3PbqYMYOxLiq"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="social2-MLB" class="content-section" style="display: none;"></div>
-    <div id="social2-NHL" class="content-section" style="display: none;"></div>
+    <div id="social2-MLB" class="content-section" style="display: none;">
+      <rssapp-feed id="vi249uKp1RN12Z3l"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NHL" class="content-section" style="display: none;">
+      <rssapp-feed id="uQ6KQ0QokYHUZbbS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-Soccer" class="content-section" style="display: none;"></div>
-    <div id="social2-FormulaOne" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAAF" class="content-section" style="display: none;"></div>
-    <div id="social2-PGATour" class="content-section" style="display: none;"></div>
-    <div id="social2-UFC" class="content-section" style="display: none;"></div>
-    <div id="social2-Boxing" class="content-section" style="display: none;"></div>
-    <div id="social2-NASCARCupSeries" class="content-section" style="display: none;"></div>
-    <div id="social2-Tennis" class="content-section" style="display: none;"></div>
-    <div id="social2-WNBA" class="content-section" style="display: none;"></div>
-    <div id="social2-LIVGolf" class="content-section" style="display: none;"></div>
-    <div id="social2-IndyCar" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAAM" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAAW" class="content-section" style="display: none;"></div>
+        <div id="social2-UEFAChampionsLeague" class="content-section" style="display: none;">
+    <rssapp-feed id="iAcjolit9IZtocN5"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+          </div>
+        <div id="social2-PremierLeague" class="content-section" style="display: none;">
+          <rssapp-feed id="fVbBQHisAql16u0y"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+        </div>
+    <div id="social2-MLS" class="content-section" style="display: none;">
+      <rssapp-feed id="MC4axOkIfdT3YnTA"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LaLiga" class="content-section" style="display: none;">
+      <rssapp-feed id="ujtZrxpQ5BsSu22x"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-SerieA" class="content-section" style="display: none;">
+      <rssapp-feed id="Yglo7I7rlITB5k4u"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Bundesliga" class="content-section" style="display: none;">
+      <rssapp-feed id="IRNaWsuHSE069wgX"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Ligue1" class="content-section" style="display: none;">
+      <rssapp-feed id="dJxdxOQ8u0BwIdDu"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-FACup" class="content-section" style="display: none;">
+      <rssapp-feed id="QPSNviYGFMuae3nG"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LigaMX" class="content-section" style="display: none;">
+      <rssapp-feed id="5rd1uWss4Hs5LWYD"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NWSL" class="content-section" style="display: none;">
+      <rssapp-feed id="Itl5WDitrA9uMtoM"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-UEFAEuropaLeague" class="content-section" style="display: none;">
+      <rssapp-feed id="cbWJ6u1SUWuPeXTE"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-UEFAConferenceLeague" class="content-section" style="display: none;">
+      <rssapp-feed id="OCkGzqYQlZy39v0p"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-FormulaOne" class="content-section" style="display: none;">
+      <rssapp-feed id="hvCjvugpsq9yoeXQ"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAAF" class="content-section" style="display: none;">
+      <rssapp-feed id="_XvlqCaEHH9Xn9F8D"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-PGATour" class="content-section" style="display: none;">
+      <rssapp-feed id="kn6jmA3jysBosngx"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-UFC" class="content-section" style="display: none;">
+      <rssapp-feed id="P6jq1TZvc8EtrVy6"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Boxing" class="content-section" style="display: none;">
+      <rssapp-feed id="_5YtqXnChDUFwAfTB"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NASCARCupSeries" class="content-section" style="display: none;">
+      <rssapp-feed id="qrXU1idLGcAVqpDS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-Tennis" class="content-section" style="display: none;">
+      <rssapp-feed id="npcSfIXdZt2e1C8N"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-WNBA" class="content-section" style="display: none;">
+      <rssapp-feed id="ouM1E0qllHGxS9V9"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LIVGolf" class="content-section" style="display: none;">
+      <rssapp-feed id="iokQbeF8AyOyB7eV"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-IndyCar" class="content-section" style="display: none;">
+      <rssapp-feed id="mQxJ5jXSwVvyqWpX"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAAM" class="content-section" style="display: none;">
+      <rssapp-feed id="A4B6vOUQc3buqCcr"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAAW" class="content-section" style="display: none;">
+      <rssapp-feed id="eoNNdETxOszQqeDL"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="social2-UFL" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAABaseball" class="content-section" style="display: none;"></div>
-    <div id="social2-NCAASoftball" class="content-section" style="display: none;"></div>
-    <div id="social2-MotoGP" class="content-section" style="display: none;"></div>
-    <div id="social2-LPGATour" class="content-section" style="display: none;"></div>
+    <div id="social2-NCAABaseball" class="content-section" style="display: none;">
+      <rssapp-feed id="Wwh4ViSkq4v95s4r"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-NCAASoftball" class="content-section" style="display: none;">
+      <rssapp-feed id="7nJZNfye0vnRtqMG"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-MotoGP" class="content-section" style="display: none;">
+      <rssapp-feed id="pSND1Jb4PbIWrdZ5"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="social2-LPGATour" class="content-section" style="display: none;">
+      <rssapp-feed id="lpGNeC7OD6NnAT4Z"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
   </div>
        </div>
         <!-- DIVIDER BETWEEN SOCIAL PANEL AND MEDIA CENTER PANEL -->
@@ -1307,6 +1380,5 @@ document.querySelectorAll("#menuList li[data-section]").forEach(item => {
     </script>
   </body>
 </html> 
-
 
 
