--- a/testing.html
+++ b/testing.html
@@ -924,7 +924,9 @@
 <!-- Container for second social content areas -->
   <div id="discussion-panel">
     <div id="discussion-Home" class="content-section" style="display: none;"></div>
-    <div id="discussion-NFL" class="content-section" style="display: none;"></div>
+    <div id="discussion-NFL" class="content-section" style="display: none;">
+      <rssapp-list id="Ad2sypO2W5TebTah"></rssapp-list><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-NBA" class="content-section" style="display: none;">
       <rssapp-feed id="X8zCF7HteOBdTUyk"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
@@ -1380,5 +1382,3 @@ document.querySelectorAll("#menuList li[data-section]").forEach(item => {
     </script>
   </body>
 </html> 
-
-
