--- a/testing.html
+++ b/testing.html
@@ -930,10 +930,15 @@
     <div id="discussion-NBA" class="content-section" style="display: none;">
       <rssapp-feed id="X8zCF7HteOBdTUyk"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="discussion-MLB" class="content-section" style="display: none;"></div>
+    <div id="discussion-MLB" class="content-section" style="display: none;">
+      <rssapp-feed id="5BZVMJXLmnRlh1J3"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-NHL" class="content-section" style="display: none;"></div>
     <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
-    <div id="discussion-FormulaOne" class="content-section" style="display: none;"></div>
+<div id="discussion-PremierLeague" class="content-section" style="display: none;">
+    <rssapp-feed id="gisD3Zv7xFE1eMJG"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+</div>
+  <div id="discussion-FormulaOne" class="content-section" style="display: none;"></div>
     <div id="discussion-NCAAF" class="content-section" style="display: none;"></div>
     <div id="discussion-PGATour" class="content-section" style="display: none;"></div>
     <div id="discussion-UFC" class="content-section" style="display: none;"></div>
