--- a/testing2.html
+++ b/testing2.html
@@ -59,7 +59,7 @@
       }
       .main-menu {
         background-color: #151515;
-        color: #91b3a2;
+        color: white;
         flex: 0 0 165px;
         font-size: 11px;
         padding: 0;
@@ -99,7 +99,7 @@
         margin-top: 2px;
         margin-bottom: 2px;
         background-color: #000;
-        color: #fff;
+        color: white;
         border: 1px solid #353535;
         padding: 2px 5px 2px 25px;
         font-size: 10px;
@@ -121,7 +121,7 @@
         font-family: Helvetica, Arial, sans-serif;
         text-transform: uppercase;
         cursor: pointer;
-        color: #fff;
+        color: white;
       }
       .menu-filter.active {
         background-color: #c7d2c3;
@@ -131,7 +131,7 @@
       .selected {
         font-weight: bold;
         background-color: #91b3a2;
-        color: #000;
+        color: white;
       }
       #menuList ul {
         padding-left: 0;
