--- a/testing3.html
+++ b/testing3.html
@@ -65,8 +65,8 @@
       }
       .news {
         flex: 0 0 380px;
-        background-color: #3f3f3f; /* changed to black */
-        color: white;         /* changed to white */
+        background-color: #949494; /* changed to black */
+        color: black;         /* changed to white */
         padding: 0;
       }
       .social {
