--- a/testing.html
+++ b/testing.html
@@ -931,6 +931,26 @@
     <div id="discussion-MLB" class="content-section" style="display: none;"></div>
     <div id="discussion-NHL" class="content-section" style="display: none;"></div>
     <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
+ <div id="discussion-Soccer" class="content-section" style="display: none;"></div>
+     <div id="discussion-UEFAChampionsLeague" class="content-section" style="display: none;"></div>
+     <div id="discussion-PremierLeague" class="content-section" style="display: none;">
+       <rssapp-feed id="oCaWMBYI3Vs3Kywq"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-MLS" class="content-section" style="display: none;">
+       <rssapp-feed id="Q0H73zuZlRTFpkv1"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-LaLiga" class="content-section" style="display: none;">
+       <rssapp-feed id="rflYsSu16RFclWIC"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-SerieA" class="content-section" style="display: none;"></div>
+     <div id="discussion-Bundesliga" class="content-section" style="display: none;"></div>
+     <div id="discussion-FACup" class="content-section" style="display: none;"></div>
+     <div id="discussion-LigaMX" class="content-section" style="display: none;"></div>
+     <div id="discussion-NWSL" class="content-section" style="display: none;"></div>
+     <div id="discussion-Ligue1" class="content-section" style="display: none;"></div>
+     <div id="discussion-UEFAEuropaLeague" class="content-section" style="display: none;"></div>
+         <div id="discussion-UEFAConferenceLeague" class="content-section" style="display: none;"></div>
+
     <div id="discussion-FormulaOne" class="content-section" style="display: none;"></div>
     <div id="discussion-NCAAF" class="content-section" style="display: none;"></div>
     <div id="discussion-PGATour" class="content-section" style="display: none;"></div>
