--- a/testing.html
+++ b/testing.html
@@ -942,22 +942,46 @@
      <div id="discussion-LaLiga" class="content-section" style="display: none;">
        <rssapp-feed id="rflYsSu16RFclWIC"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
      </div>
-     <div id="discussion-SerieA" class="content-section" style="display: none;"></div>
-     <div id="discussion-Bundesliga" class="content-section" style="display: none;"></div>
+     <div id="discussion-SerieA" class="content-section" style="display: none;">
+       <rssapp-feed id="oAWKzeeSPcauiX4i"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-Bundesliga" class="content-section" style="display: none;">
+       <rssapp-feed id="S8MB8h1KL0klETpS"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
      <div id="discussion-FACup" class="content-section" style="display: none;"></div>
-     <div id="discussion-LigaMX" class="content-section" style="display: none;"></div>
-     <div id="discussion-NWSL" class="content-section" style="display: none;"></div>
-     <div id="discussion-Ligue1" class="content-section" style="display: none;"></div>
-     <div id="discussion-UEFAEuropaLeague" class="content-section" style="display: none;"></div>
+     <div id="discussion-LigaMX" class="content-section" style="display: none;">
+       <rssapp-feed id="I4KXu20XuDvq6LA6"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-NWSL" class="content-section" style="display: none;">
+       <rssapp-feed id="Om3ED2kD1XXgzDM3"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-Ligue1" class="content-section" style="display: none;">
+       <rssapp-feed id="RVsDp2GVXYyxSur6"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
+     <div id="discussion-UEFAEuropaLeague" class="content-section" style="display: none;">
+       <rssapp-feed id="WSRzWdz4lsY7XLqs"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+     </div>
          <div id="discussion-UEFAConferenceLeague" class="content-section" style="display: none;"></div>
 
-    <div id="discussion-FormulaOne" class="content-section" style="display: none;"></div>
-    <div id="discussion-NCAAF" class="content-section" style="display: none;"></div>
-    <div id="discussion-PGATour" class="content-section" style="display: none;"></div>
-    <div id="discussion-UFC" class="content-section" style="display: none;"></div>
-    <div id="discussion-Boxing" class="content-section" style="display: none;"></div>
+    <div id="discussion-FormulaOne" class="content-section" style="display: none;">
+      <rssapp-feed id="85SpnMvb85gFeLyD"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-NCAAF" class="content-section" style="display: none;">
+      <rssapp-feed id="CAxoEx0HZaXmPVSW"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-PGATour" class="content-section" style="display: none;">
+      <rssapp-feed id="3Wtoa3aScGzSpsso"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-UFC" class="content-section" style="display: none;">
+      <rssapp-feed id="JnBJPTUpbvTnGeTu"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-Boxing" class="content-section" style="display: none;">
+      <rssapp-feed id="gv29fkLLbIn0BeOK"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-NASCARCupSeries" class="content-section" style="display: none;"></div>
-    <div id="discussion-Tennis" class="content-section" style="display: none;"></div>
+    <div id="discussion-Tennis" class="content-section" style="display: none;">
+      <rssapp-feed id="L2Ac9tnnPGpSZjvM"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-WNBA" class="content-section" style="display: none;"></div>
     <div id="discussion-LIVGolf" class="content-section" style="display: none;"></div>
     <div id="discussion-IndyCar" class="content-section" style="display: none;"></div>
@@ -967,7 +991,9 @@
     <div id="discussion-NCAABaseball" class="content-section" style="display: none;"></div>
     <div id="discussion-NCAASoftball" class="content-section" style="display: none;"></div>
     <div id="discussion-MotoGP" class="content-section" style="display: none;"></div>
-    <div id="discussion-LPGATour" class="content-section" style="display: none;"></div>
+    <div id="discussion-LPGATour" class="content-section" style="display: none;">
+      <rssapp-feed id="AyWQKiJRyc2zeSlc"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
   </div>
 
     </div>
