--- a/testing.html
+++ b/testing.html
@@ -978,11 +978,15 @@
     <div id="discussion-Boxing" class="content-section" style="display: none;">
       <rssapp-feed id="gv29fkLLbIn0BeOK"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="discussion-NASCARCupSeries" class="content-section" style="display: none;"></div>
+    <div id="discussion-NASCARCupSeries" class="content-section" style="display: none;">
+      <rssapp-feed id="tYg43NMiZvDRIAa4"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-Tennis" class="content-section" style="display: none;">
       <rssapp-feed id="L2Ac9tnnPGpSZjvM"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="discussion-WNBA" class="content-section" style="display: none;"></div>
+    <div id="discussion-WNBA" class="content-section" style="display: none;">
+      <rssapp-feed id="IWKxx96jb1ksiWLu"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-LIVGolf" class="content-section" style="display: none;"></div>
     <div id="discussion-IndyCar" class="content-section" style="display: none;"></div>
     <div id="discussion-NCAAM" class="content-section" style="display: none;"></div>
