--- a/testing.html
+++ b/testing.html
@@ -987,14 +987,28 @@
     <div id="discussion-WNBA" class="content-section" style="display: none;">
       <rssapp-feed id="IWKxx96jb1ksiWLu"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
-    <div id="discussion-LIVGolf" class="content-section" style="display: none;"></div>
-    <div id="discussion-IndyCar" class="content-section" style="display: none;"></div>
-    <div id="discussion-NCAAM" class="content-section" style="display: none;"></div>
-    <div id="discussion-NCAAW" class="content-section" style="display: none;"></div>
+    <div id="discussion-LIVGolf" class="content-section" style="display: none;">
+      <rssapp-feed id="2771bSTSf5qdUB1M"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-IndyCar" class="content-section" style="display: none;">
+      <rssapp-feed id="0bAWS5eX2tPJCNr1"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-NCAAM" class="content-section" style="display: none;">
+      <rssapp-feed id="IDyLnq9fS7yWahrd"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-NCAAW" class="content-section" style="display: none;">
+      <rssapp-feed id="L2ATnd5hx0Z5OfyA"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-UFL" class="content-section" style="display: none;"></div>
-    <div id="discussion-NCAABaseball" class="content-section" style="display: none;"></div>
-    <div id="discussion-NCAASoftball" class="content-section" style="display: none;"></div>
-    <div id="discussion-MotoGP" class="content-section" style="display: none;"></div>
+    <div id="discussion-NCAABaseball" class="content-section" style="display: none;">
+      <rssapp-feed id="EPPICNiRNp9GwtV3"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-NCAASoftball" class="content-section" style="display: none;">
+      <rssapp-feed id="euD3n4iqhq9ZYFtb"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
+    <div id="discussion-MotoGP" class="content-section" style="display: none;">
+      <rssapp-feed id="bL13m73toFp5PIaX"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+    </div>
     <div id="discussion-LPGATour" class="content-section" style="display: none;">
       <rssapp-feed id="AyWQKiJRyc2zeSlc"></rssapp-feed><script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
     </div>
